feat: Creation of the update-habit service, route and test
