# src/routes/create-habit-route.ts
@@ -1,25 +1,32 @@
 import type { FastifyPluginAsyncZod } from 'fastify-type-provider-zod';
 import z from 'zod';
 import { InvalidUserIdError } from '../errors/invalid-user-id';
+import { authenticateUserMiddleware } from '../middleware/authenticate-user-middleware';
 import { createHabit } from '../services/create-habit';
 
-export const createhabitRoute: FastifyPluginAsyncZod = async app => {
+export const createHabitRoute: FastifyPluginAsyncZod = async app => {
   app.post(
-    '/create-habit',
+    '/habit/create-habit',
     {
+      onRequest: [authenticateUserMiddleware],
       schema: {
-        operationId: 'createhabit',
+        operationId: 'createHabit',
         tags: ['Habit'],
         description: 'Create a new habit',
         body: z.object({
-          userId: z.uuid({ version: 'v4' }),
           title: z.string().min(3).max(256),
           description: z.string().max(2048).optional(),
           frequency: z.enum(['daily', 'weekly', 'monthly']).default('daily'),
           startsDate: z.coerce.date().optional(),
         }),
-        reponse: {
+        response: {
           201: z.object({
+            message: z.string(),
+          }),
+          409: z.object({
+            message: z.string(),
+          }),
+          500: z.object({
             message: z.string(),
           }),
         },
@@ -27,8 +34,10 @@ export const createhabitRoute: FastifyPluginAsyncZod = async app => {
     },
     async (request, reply) => {
       try {
-        const { userId, title, description, frequency, startsDate } =
-          request.body;
+        const userId = request.user?.id;
+        if (!userId) throw new InvalidUserIdError(userId);
+
+        const { title, description, frequency, startsDate } = request.body;
 
         await createHabit({
           userId,
@@ -38,7 +47,9 @@ export const createhabitRoute: FastifyPluginAsyncZod = async app => {
           startsDate,
         });
 
-        reply.status(201).send({ message: 'Hábito criado com sucesso!' });
+        return reply
+          .status(201)
+          .send({ message: 'Hábito criado com sucesso!' });
       } catch (error) {
         if (error instanceof InvalidUserIdError) {
           return reply.status(409).send({ message: error.message });
